# scp-scripts-anthology

./: Cargo.toml  README.md
src/: cli.rs  common_tools.rs  forum_dl.rs  list_files.rs  list_pages.rs  main.rs  script_data.rs  sourced.rs
src/forum_dl/: cli.rs  mod.rs
src/list_pages/: cli.rs  crom.rs  mod.rs
