[package]
name = "scp-scripts-anthology"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
scraper = "0.22.0"
clap = { version = "4.5.27", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }