[package]
name = "scp-scripts-anthology"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11"
scraper = "0.25.0"
clap = { version = "4.5.27", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
serde = { version = "1.0.217", features = ["derive"] }
spider_chrome = "2.37.120"
rpassword = "7.4.0"
itertools = "0.14.0"