[package]
name = "scp-scripts-anthology"
version = "0.2.0"
edition = "2024"

[features]
default = ["list-pages", "forum-dl", "list-files"]
list-pages = []
forum-dl = []
list-files = []

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.12"
scraper = "0.25"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"] }
chrono = "0.4"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
spider_chromiumoxide_cdp = "=0.7.7"
spider_chrome = "2.37.129"
itertools = "0.14"
lazy_static = "1.5"